# wraithform

./: .gitignore  BUILD.md  CMakeLists.txt  Editor_1_0_4.cpp  Editor_1_0_8.cpp  README.md  build_brightness_log.txt  build_circular_log.txt  build_consolidate_log.txt  build_debug_log.txt  build_debug_log_2.txt  build_debug_log_3.txt  build_deep_clean.txt  build_emergency_log.txt  build_error.txt  build_final_fix_log.txt  build_ghost_fix.txt  build_header_fix_log.txt  build_icon_log.txt  build_inline_log.txt  build_inline_log_2.txt  build_log.txt  build_log_10.txt  build_log_11.txt  build_log_12.txt  build_log_13.txt  build_log_14.txt  build_log_15.txt  build_log_16.txt  build_log_17.txt  build_log_2.txt  build_log_3.txt  build_log_4.txt  build_log_6.txt  build_log_8.txt  build_log_full.txt  build_log_utf8.txt  build_log_utf8_4.txt  build_nuclear_error_output.txt  build_nuclear_fixed_log.txt  (+42 more)
Good_Version/$PLUGINSDIR/: NSIS.InstallOptions.ini
Source/: CircularOscilloscopeShader.h  CloudVortexShader.h  CosmicFlareShader.h  PhaseCorrelationShader.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RingBuffer.h  SpectrogramShader.h  SplashCanvas.h  UpdateChecker.h  VisualizerShader.h  VolumetricExplosionShader.h  WaveformShader.h  WraithForm.rc
